--- a/style.css
+++ b/style.css
@@ -2,3 +2,13 @@
   margin-bottom: 8px;
   padding-bottom: 0px;
 }
+
+.publication-thumbnail {
+  width: 120px;
+  height: 120px;
+}
+
+#profile-pic {
+  height: 250px;
+  display: block;
+}
