--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+#profile-pic {
+  height: 250px;
+  display: block;
+}
+
 .profile-row {
   margin-bottom: 8px;
   padding-bottom: 0px;
@@ -8,7 +13,25 @@
   height: 120px;
 }
 
-#profile-pic {
-  height: 250px;
+.citation-container {
+  overflow: hidden;
+}
+
+.citation-content {
+  position: absolute;
+  border-radius: 10px;
+  background-color:white;
+  opacity: 0.95;
+  font-size: 12px;
+  font-weight: bold;
+  font-family: Roboto;
+  color: black;
+  display: none;
+}
+
+.citation-content:hover, .citation:hover + .citation-content {
+  position: absolute;
   display: block;
+  box-shadow: 7px 6px 33px -8px rgba(0,0,0,0.86);
+  z-index:1000;
 }
